# LocalGemma

./: settings.gradle.kts
GemmaChat/: .gitignore  INSTALLATION.md  README.md  gradle.properties  settings.gradle.kts  setup_llama_cpp.sh
GemmaChat/app/: build.gradle.kts  proguard-rules.pro
GemmaChat/app/src/main/: AndroidManifest.xml
GemmaChat/app/src/main/cpp/: CMakeLists.txt  llama-android.cpp  native-lib.cpp
GemmaChat/app/src/main/java/com/gemmachat/: GemmaChatApplication.kt  MainActivity.kt
GemmaChat/app/src/main/java/com/gemmachat/data/dao/: ChatDao.kt
GemmaChat/app/src/main/java/com/gemmachat/data/database/: ChatDatabase.kt
GemmaChat/app/src/main/java/com/gemmachat/llm/: LlamaJNI.kt  LlamaManager.kt
GemmaChat/app/src/main/java/com/gemmachat/services/: ChatNotificationService.kt
GemmaChat/app/src/main/java/com/gemmachat/utils/: PreferencesManager.kt  ThemeManager.kt
GemmaChat/app/src/main/java/com/gemmachat/viewmodels/: ChatViewModel.kt
GemmaChat/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
GemmaChat/app/src/main/res/values-en/: strings.xml
GemmaChat/app/src/main/res/values-night/: themes.xml
GemmaChat/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/: build.gradle.kts
app/src/androidTest/java/com/localgemma/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/localgemma/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
